# docs/swagger.yaml
@@ -851,24 +851,6 @@ paths:
       summary: calculateReverseDayTradeBalance
       tags:
       - order
-  /order/status/update:
-    put:
-      consumes:
-      - application/json
-      description: askOrderUpdate
-      operationId: askOrderUpdate
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/v1.response'
-      summary: askOrderUpdate
-      tags:
-      - order
   /stream/future/switch:
     get:
       consumes:
